src/test/ui/issues/30000-39999/issue-30007.rs
macro_rules! t {
    () => ( String ; );     //~ ERROR macro expansion ignores token `;`
}

fn main() {
    let i: Vec<t!()>;
}
